feat: change styles after font change

--- a/7290116748528/index.html
+++ b/7290116748528/index.html
@@ -166,7 +166,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 300px;
+        width: 303px;
         margin-bottom: 8px;
         padding-inline: 8px;
       }
@@ -500,6 +500,7 @@
         align-items: center;
         gap: 30px;
         padding-top: 30px;
+        align-items: flex-start;
       }
       #es-rc-content.es-rc .es-coctails__tastes-single {
         max-width: 300px;
@@ -686,7 +687,7 @@
           min-height: 295px;
         }
         #es-rc-content.es-rc .es-eco__number {
-          min-height: 80px;
+          min-height: 25px;
         }
         #es-rc-content.es-rc .es-eco__content {
           flex-direction: row;
@@ -759,7 +760,7 @@
           font-size: 30px;
         }
         #es-rc-content.es-rc .es-art__steps-item-description--desktop {
-          max-width: 28%;
+          max-width: 26%;
           text-align: left;
           font-size: 20px;
         }
@@ -885,17 +886,17 @@
           font-size: 57px;
         }
         #es-rc-content.es-rc .es-kv__footer {
-          max-width: 78%;
+          max-width: 76%;
           font-size: 19px;
         }
         #es-rc-content.es-rc .es-eco__text {
-          max-width: 85%;
+          max-width: 81%;
           font-size: 21px;
           left: 5%;
           bottom: 4%;
         }
         #es-rc-content.es-rc .es-eco__text--second {
-          max-width: 83%;
+          max-width: 78%;
           margin-bottom: 50px;
         }
         #es-rc-content.es-rc .es-eco__title {
@@ -1002,7 +1003,7 @@
           font-size: 21px;
           margin-top: -105px;
           margin-left: 74px;
-          max-width: 50%;
+          max-width: 49%;
         }
         #es-rc-content.es-rc .es-coctails__tastes-subtitle--second {
           font-size: 21px;
@@ -1091,7 +1092,8 @@
             <p class="es-kv__text">
               SodaStream Ensō to esencja minimalizmu i elegancji. Ten&nbsp;inspirowany japońskim wzornictwem ekspres do
               gazowania wody,
-              zaprojektowany przez cenionego projektanta Naoto Fukasawę, zachwyca prostotą formy i subtelnym urokiem.
+              zaprojektowany przez cenionego projektanta Naoto Fukasawę, zachwyca prostotą formy&nbsp;i&nbsp;subtelnym
+              urokiem.
             </p>
           </div>
           <div class="es-kv__packshot">
@@ -1156,8 +1158,9 @@
                    loading="lazy"
                    alt="icon" />
               <p class="es-eco__single-text">
-                Montaż i demontaż butelki jest dziecinnie prosty. System „klik” pozwala na szybkie zabezpieczenie
-                butelki<br> jednym ruchem,<br>
+                Montaż i demontaż butelki jest dziecinnie prosty. <br> System „klik” pozwala na <br>szybkie
+                zabezpieczenie
+                butelki jednym ruchem,<br>
                 co sprawia, że korzystanie
                 <br>z urządzenia jest intuicyjne
                 <br>i wygodne.
@@ -1415,7 +1418,8 @@
               Ananas & Jalapeño:
             </p>
             <p class="es-coctails__tastes-single-description">
-              Unikalne połączenie smaków tropikalnego ananasa i ognistego jalapeño, które rozpali wszystkie zmysły
+              Unikalne połączenie<br> smaków tropikalnego <br>ananasa i ognistego<br> jalapeño, które rozpali wszystkie
+              zmysły
             </p>
           </div>
           <div class="es-coctails__tastes-single">
