style: remove bullets, change max-width

--- a/7290116748528/index.html
+++ b/7290116748528/index.html
@@ -284,6 +284,8 @@
         font-weight: 700;
         font-size: 19px;
         color: #fff;
+        list-style: none;
+        padding-left: 5px;
       }
       #es-rc-content.es-rc .es-natural__item {
         font-family: "HurmeGeometric3-Regular", "Roboto", sans-serif;
@@ -943,7 +945,7 @@
         #es-rc-content.es-rc .es-natural__list {
           margin-top: 30px;
           padding-top: 25px;
-          max-width: 43%;
+          max-width: 40%;
           font-size: 21px;
         }
         #es-rc-content.es-rc .es-natural__item {
