feat: remove void tags

--- a/7290116748528/index.html
+++ b/7290116748528/index.html
@@ -1084,11 +1084,10 @@
             <div class="es-kv__logo">
               <img class="es-kv__img es-kv__img--logo"
                    src="./images/logo.png"
-                   loading="lazy"
-                   alt="SODAstream" />
+                   alt="SODAstream">
             </div>
             <h2 class="es-kv__title">
-              Harmonia formy <br />i&nbsp;funkcjonalności
+              Harmonia formy <br>i&nbsp;funkcjonalności
             </h2>
 
             <p class="es-kv__text">
@@ -1101,12 +1100,10 @@
           <div class="es-kv__packshot">
             <img class="es-kv__img es-kv__img--mobile"
                  src="./images/kv-packshot.png"
-                 loading="lazy"
-                 alt="Opakowanie" />
+                 alt="Opakowanie">
             <img class="es-kv__img es-kv__img--desktop"
                  src="./images/kv.png"
-                 loading="lazy"
-                 alt="Opakowanie" />
+                 alt="Opakowanie">
           </div>
         </div>
         <div class="es-kv__footer-container">
@@ -1127,8 +1124,7 @@
           <div class="es-eco__picture-container">
             <img class="es-eco__img es-eco__img--big"
                  src="./images/picture-1.png"
-                 loading="lazy"
-                 alt="Sodastream Enso" />
+                 alt="Sodastream Enso">
             <p class="es-eco__text">
               Każdy element SodaStream Ensō został starannie przemyślany, łącząc sztukę&nbsp;użytkową z najwyższej
               jakości
@@ -1157,8 +1153,7 @@
               </p>
               <img class="es-eco__img"
                    src="./images/icon-1.png"
-                   loading="lazy"
-                   alt="icon" />
+                   alt="icon">
               <p class="es-eco__single-text">
                 Montaż i demontaż butelki jest dziecinnie prosty. <br> System „klik” pozwala na <br>szybkie
                 zabezpieczenie
@@ -1174,8 +1169,7 @@
               </p>
               <img class="es-eco__img"
                    src="./images/icon-2.png"
-                   loading="lazy"
-                   alt="icon" />
+                   alt="icon">
               <p class="es-eco__single-text">
                 Innowacyjny system montażu cylindra CO₂ eliminuje konieczność wkręcania. Wystarczy wsunąć cylinder do
                 specjalnej komory,
@@ -1188,8 +1182,7 @@
               </p>
               <img class="es-eco__img"
                    src="./images/icon-3.png"
-                   loading="lazy"
-                   alt="icon" />
+                   alt="icon">
               <p class="es-eco__single-text">
                 Elementy wykonane ze stali nierdzewnej gwarantują niezawodność i łatwość utrzymania w czystości,
                 <br>a jednocześnie dodają urządzeniu elegancji.
@@ -1272,8 +1265,7 @@
 
           <img class="es-eco__img es-eco__img--eco"
                src="./images/eco-image.png"
-               loading="lazy"
-               alt="Eco image" />
+               alt="Eco image">
         </div>
       </div>
 
@@ -1308,8 +1300,7 @@
             </p>
             <img class="es-art__steps-item-image es-art__steps-item-image--1"
                  src="./images/step-1.png"
-                 loading="lazy"
-                 alt="Gazuj" />
+                 alt="Gazuj">
             <p class="es-art__steps-item-description">
               Napełnij butelkę zimną wodą z kranu i nagazuj według własnych upodobań.
             </p>
@@ -1320,8 +1311,7 @@
             </p>
             <img class="es-art__steps-item-image es-art__steps-item-image--2"
                  src="./images/step-2.png"
-                 loading="lazy"
-                 alt="Miksuj" />
+                 alt="Miksuj">
             <p class="es-art__steps-item-description">
               Dodaj wybrane
               składniki – od klasycznych syropów
@@ -1334,8 +1324,7 @@
             </p>
             <img class="es-art__steps-item-image es-art__steps-item-image--3"
                  src="./images/step-3.png"
-                 loading="lazy"
-                 alt="Smakuj" />
+                 alt="Smakuj">
             <p class="es-art__steps-item-description">
               Rozkoszuj się orzeźwiającym napojem stworzonym przez Ciebie.
             </p>
@@ -1346,8 +1335,7 @@
         <div class="es-art__steps es-art__steps--desktop">
           <img class="es-art__steps-item-image es-art__steps-item-image--desktop"
                src="./images/gas-desktop.png"
-               loading="lazy"
-               alt="Gazuj" />
+               alt="Gazuj">
 
           <div class="es-art__steps-text-container">
             <p
@@ -1356,8 +1344,7 @@
             </p>
             <img class="es-art__steps-item-line es-art__steps-item-line--1"
                  src="./images/line-1.png"
-                 loading="lazy"
-                 alt="Linia" />
+                 alt="Linia">
 
             <p
                class="es-art__steps-item-description es-art__steps-item-description--desktop es-art__steps-item-description--desktop-2">
@@ -1368,8 +1355,7 @@
 
             <img class="es-art__steps-item-line es-art__steps-item-line--2"
                  src="./images/line-2.png"
-                 loading="lazy"
-                 alt="Linia" />
+                 alt="Linia">
 
             <p
                class="es-art__steps-item-description es-art__steps-item-description--desktop es-art__steps-item-description--desktop-3">
@@ -1387,23 +1373,20 @@
           <div class="es-coctails__left">
             <img class="es-coctails__left-logo"
                  src="./images/sodastream-crafted-logo.png"
-                 loading="lazy"
-                 alt="Logotyp" />
+                 alt="Logotyp">
             <img class="es-coctails__image"
                  src="./images/coctail-1.png"
-                 loading="lazy"
-                 alt="Koktajl" />
+                 alt="Koktajl">
           </div>
           <div class="es-coctails__right">
             <p class="es-coctails__right-title">
-              Perfekcyjne<br />
-              koktajle i&nbsp;moktajle<br />
+              Perfekcyjne<br>
+              koktajle i&nbsp;moktajle<br>
               na 1, 2, tssst!
             </p>
             <img class="es-coctails__image"
                  src="./images/coctail-2.png"
-                 loading="lazy"
-                 alt="Koktajl" />
+                 alt="Koktajl">
           </div>
         </div>
         <p class="es-coctails__description">
@@ -1457,8 +1440,7 @@
       <div class="es-taste">
         <img class="es-taste__day-night"
              src="./images/day-night-sodastream.png"
-             loading="lazy"
-             alt="Sodastream" />
+             alt="Sodastream">
         <div class="es-taste__container">
           <h3 class="es-taste__subtitle">
             Jedna SodaStream – wiele&nbsp;możliwości
@@ -1466,8 +1448,7 @@
 
           <img class="es-taste__img"
                src="./images/syrups.png"
-               loading="lazy"
-               alt="syrups" />
+               alt="syrups">
           <p class="es-taste__text">
             Odkryj bogactwo syropów SodaStream i stwórz ulubione napoje w każdej chwili! Wybierz klasyczne smaki jak
             Pepsi, 7UP czy
